After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789385 - fix xcode template
fix xcode template
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: cerbero
1.x
Other Linux
: Normal normal
: 1.12.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-24 07:21 UTC by Nicola
Modified: 2017-11-21 16:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix gst_ios_init declaration (861 bytes, patch)
2017-10-24 07:21 UTC, Nicola
committed Details | Review

Description Nicola 2017-10-24 07:21:18 UTC
Created attachment 362144 [details] [review]
fix gst_ios_init declaration

.
Comment 1 Sebastian Dröge (slomo) 2017-10-24 12:05:55 UTC
commit dcb4f2db3d08cd0c9bea0c68abda3cd60dc0c30c (HEAD -> master)
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Tue Oct 24 09:19:35 2017 +0200

    xcode template: fix gst_ios_init declaration
    
    https://bugzilla.gnome.org/show_bug.cgi?id=789385