xcode template: fix gst_ios_init declaration

https://bugzilla.gnome.org/show_bug.cgi?id=789385